#29: Tasks completed - (Client) Graph, (API) Swagger

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,8 @@ const { title, description } = Astro.props;
 		<meta property="og:title" content={title} />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://clicker.stats100.xyz" />
-		<meta property="og:image" content="/Main.png" />
+		<!-- TODO: Add OG image -->
+		<meta property="og:image" content="" />
 		<meta property="og:description" content={description} />
 		<meta name="theme-color" content="#ffc0cb" />
 
