--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,9 +15,9 @@ import CustomChart from "../components/Chart";
 			> is still available. <br />
 			(this doesn't work btw)
 		</p>
-		<b>Odometer</b><br />
 		<button id="clickButton" type="button"
-			><strong>Click Me!</strong></button
+			><strong>Click Me! (updates my original clicker currently)</strong
+			></button
 		>
 		<CustomChart client:only fetchClicks />
 		<ul role="list" class="link-card-grid">
