fix(#29): changed fetch time from 1 second to 2 seconds

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,8 @@ import CustomChart from "../components/Chart";
 			}
 
 			function clickRequest() {
-				fetch("/api/clicked");
+				// fetch("/api/clicked");
+				fetch('https://api-gc.galvindev.me.uk/clicked')
 			}
 		</script>
 	</main>
