#29: the basics are done

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,12 +8,7 @@ import CustomChart from "../components/Chart";
 	<main>
 		<h1>Stats100 <span class="text-gradient">Clicker</span></h1>
 		<p class="instructions">
-			A new and improved Global Clicker, coming soon. (and in Astro!) <br
-			/>
-			In the meantime, my original <a href="https://gc.galvindev.me.uk"
-				>Clicker</a
-			> is still available. <br />
-			(this doesn't work btw)
+			A new and improved Global Clicker, coming soon. (and in Astro!)
 		</p>
 
 		<div class="b">
