--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,9 +5,9 @@ import Card from '../components/Card.astro';
 
 <Layout title='Analytics' description='Analytics for Stats100 Clicker'>
 	<main>
-		<h1><span class="text-gradient">Analytics</span></h1>
+		<h1><span class="text-gradient">404</span></h1>
 		<p class="instructions">
-			Coming Soon!
+			Whoops. How about you <a href="/">go back home?</a>
 		</p>
 	</main>
 </Layout>
@@ -51,7 +51,6 @@ import Card from '../components/Card.astro';
 		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
 		padding: 1.5rem;
 		border-radius: 8px;
-		text-align: center;
 	}
 	.instructions code {
 		font-size: 0.8em;
