--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -12,4 +12,11 @@ button {
     color: white;
     font-size: 20px;
     line-height: 1.6;
+    transition-duration: 0.5s;
+}
+
+button:hover {
+    scale: 110%;
+    transition-duration: 0.5s;
+    cursor: pointer;
 }
