--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,9 +6,9 @@ import CustomChart from "../components/Chart";
 
 <Layout title="Stats100 Clicker" description="The Clicker for Stats100.xyz">
 	<main>
-		<h1>Stats100 <span class="text-gradient">Clicker</span></h1>
+		<h1>Stats100 <span class="text-gradient">Clicker</span><span><small style="font-size: small;">v1.0</small></span></h1>
 		<p class="instructions">
-			A new and improved Global Clicker, coming soon. (and in Astro!)
+			A new and improved Global Clicker. Now in Astro!
 		</p>
 
 		<div class="b">
@@ -34,70 +34,3 @@ import CustomChart from "../components/Chart";
 		</ul>
 	</main>
 </Layout>
-
-<style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
-	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(
-			rgba(var(--accent-dark), 66%),
-			rgba(var(--accent-dark), 33%)
-		);
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, min(100%));
-		gap: 2rem;
-		padding: 0;
-	}
-	.b {
-		min-width: 100%;
-		text-align: center;
-		font-size: 1.5em;
-	}
-</style>
